# 1c_task

./: CMakeLists.txt  README.md
src/: application.cpp  application.h  connection.h  listener.h  main.cpp
